# X-Band-Decoders

./: .gitignore  CMakeLists.txt  README.md
ATMS Decoder/: CMakeLists.txt  README.md
ATMS Decoder/src/: atms_reader.cpp  atms_reader.h  main.cpp
Aqua AIRS Decoder/: CMakeLists.txt
Aqua AIRS Decoder/src/: main.cpp
Aqua AMSU Decoder/: CMakeLists.txt
Aqua AMSU Decoder/src/: amsu_a1_reader.cpp  amsu_a2_reader.cpp  main.cpp
Aqua Decoder/: CMakeLists.txt  README.md
Aqua Decoder/src/: deframer.cpp  main.cpp
Aqua MODIS Extractor/: CMakeLists.txt
Aqua MODIS Extractor/src/: main.cpp
CADU Synchroderand/: CMakeLists.txt  README.md
CADU Synchroderand/src/: deframer.cpp  deframer.h  main.cpp
CADU TerraSynchroderand/: CMakeLists.txt
CADU TerraSynchroderand/src/: deframer.cpp  main.cpp
CERES Decoder/: CMakeLists.txt  README.md
CERES Decoder/src/: ceres_reader.cpp  ceres_reader.h  main.cpp
ELEKTRO-L Decoder/: CMakeLists.txt  README.md
ELEKTRO-L Decoder/src/: main.cpp  msu_ir_reader.cpp  msu_ir_reader.h  msu_reader.cpp  msu_reader.h  simpledeframer.cpp
ELEKTRO-L Demuxer/: CMakeLists.txt  README.md
ELEKTRO-L Demuxer/src/: main.cpp
FengYun 3D Decoder/: CMakeLists.txt  README.md
FengYun 3D Decoder/src/: deframer.cpp  diff.cpp  diff.h  main.cpp
FengYun MERSI-1 Decoder/: CMakeLists.txt  README.md
FengYun MERSI-1 Decoder/src/: main.cpp  mersi_1000m_reader.cpp  mersi_250m_reader.cpp  mersi_correlator.cpp  mersi_correlator.h  mersi_deframer.cpp
FengYun MERSI-2 Decoder/: CMakeLists.txt  README.md
FengYun MERSI-2 Decoder/src/: main.cpp  mersi_1000m_reader.cpp  mersi_250m_reader.cpp  mersi_correlator.cpp  mersi_correlator.h  mersi_deframer.cpp
FengYun MPT Decoder/: CMakeLists.txt  README.md
FengYun MPT Decoder/src/: deframer.cpp  main.cpp  viterbi.cpp  viterbi.h
Flowcharts/: AQUA Demodulator.grc  EEKTROL2Demod.py  ELEKTRO-L Demodulator.grc  FengYun 3D Demodulator.grc  FengYun MPT Demodulator.grc  HRD Demodulator.grc  README.md  TERRA Demodulator.grc
HRD Decoder/: CMakeLists.txt  README.md
HRD Decoder/src/: differentialencoding.cpp  differentialencoding.h  main.cpp  viterbi.cpp  viterbi.h
MODIS Decoder/: CMakeLists.txt  README.md
MODIS Decoder/src/: main.cpp  modis_reader.cpp  modis_reader.h
Terra Decoder/: CMakeLists.txt  README.md
Terra Decoder/src/: correlator.cpp  main.cpp  packetfixer.cpp  packetfixer.h  viterbi.cpp  viterbi.h  viterbi27.cpp  viterbi27.h
VIIRS Decoder/: CMakeLists.txt  README.md
VIIRS Decoder/src/: channel_correlator.cpp  channel_correlator.h  channel_reader.cpp  channel_reader.h  channels.h  main.cpp  packets.h  viirs_defrag.cpp  viirs_defrag.h
