cmake_minimum_required (VERSION 3.0.0)

add_subdirectory("Aqua Decoder")
add_subdirectory("Terra Decoder")
add_subdirectory("Aqua MODIS Extractor")
add_subdirectory("CADU Synchroderand")
add_subdirectory("ELEKTRO-L Decoder")
add_subdirectory("FengYun 3D Decoder")
add_subdirectory("FengYun MPT Decoder")
add_subdirectory("FengYun MERSI-2 Decoder")
add_subdirectory("FengYun MERSI-1 Decoder")
add_subdirectory("MODIS Decoder")
add_subdirectory("VIIRS Decoder")
add_subdirectory("HRD Decoder")
